# bloop

./: .gitignore  Plumbing.hs  Porcelain.hs  README.md  Test.hs  bloop  bloop.cabal  main.hs
script/: ghci  test
src/cli/: Main.hs  Porcelain.hs
src/lib/: Plumbing.hs
test/: Main.hs
