name:                bloop
version:             0.0.0.0
build-type:          Simple
cabal-version:       >=1.8

executable exec
  hs-source-dirs:    .
  main-is:           Porcelain.hs
  build-depends:     base
                   , bytestring
                   , directory
                   , filepath
                   , cryptohash
                   , zlib

test-suite spec
  hs-source-dirs:    test
  main-is:           Test.hs
  type:              exitcode-stdio-1.0
  build-depends:     base
                   , HUnit
                   , bloop
