name:                bloop
version:             0.0.0.0
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:    src/lib
  build-depends:     base
                   , bytestring
                   , directory
                   , filepath
                   , cryptohash
                   , zlib
  exposed-modules:   Plumbing

executable bloop-cli
  hs-source-dirs:    src/cli
  main-is:           Porcelain.hs
  build-depends:     base
                   , bytestring
                   , bloop

test-suite spec
  hs-source-dirs:    test
  main-is:           Main.hs
  type:              exitcode-stdio-1.0
  build-depends:     base
                   , bytestring
                   , HUnit
                   , bloop
