name:                bloop
version:             0.0.0.0
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:    src/lib
  build-depends:     base
                   , bytestring == 0.10.4.0
                   , directory
                   , filepath
                   , unix
                   , cryptohash
                   , zlib
  exposed-modules:   Plumbing

executable bloop-cli
  hs-source-dirs:    src/cli
  main-is:           Main.hs
  build-depends:     base
                   , bytestring == 0.10.4.0
                   , bloop

test-suite spec
  hs-source-dirs:    test
  main-is:           Main.hs
  type:              exitcode-stdio-1.0
  build-depends:     base
                   , bytestring == 0.10.4.0
                   , HUnit
                   , bloop
